Chores: modify config + add lib

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default" : "Server=DESKTOP-M5R56MF\\SQLEXPRESS,6969;Database=tech-store-db;User Id=admin;Password=123;TrustServerCertificate=True;Encrypt=True"
+  },
   "AllowedHosts": "*"
 }
