Update: auth, data seeding

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "Default" : "Server=DESKTOP-M5R56MF\\SQLEXPRESS,6969;Database=tech-store-db;User Id=admin;Password=123;TrustServerCertificate=True;Encrypt=True"
   },
+  "JWT": {
+    "SecretToken" : "sdlyT3zBcmT4GDC2C1RluAKQCB0ju4loBlcxRueGW1lGhiluXrOW"
+  },
   "AllowedHosts": "*"
 }
